--- a/templates/contact.html
+++ b/templates/contact.html
@@ -99,7 +99,7 @@ header{
     </div>
 
     <div class="quick">
-      <a class="fb" href="https://facebook.com/dyukhankute" target="_blank">📘 Facebook</a>
+      <a class="fb" href="https://facebook.com/khankute.6" target="_blank">📘 Facebook</a>
       <a class="menu" href="/menu">🍢 Xem menu</a>
     </div>
 
